--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/joy": "^5.0.0-beta.10",
     "@mui/material": "^5.14.13",
+    "@mui/styles": "^5.14.13",
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
