--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "@mui/joy": "^5.0.0-beta.10",
     "@mui/material": "^5.14.13",
     "@mui/styles": "^5.14.13",
+    "axios": "^1.5.1",
+    "lodash.chunk": "^4.2.0",
+    "ms": "^2.1.3",
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/lodash.chunk": "^4.2.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "axios-mock-adapter": "^1.22.0",
     "typescript": "^5"
   }
 }
